--- a/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Views/Shared/_LayoutKiosco.cshtml
+++ b/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Views/Shared/_LayoutKiosco.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "";
 
 }
@@ -16,13 +15,15 @@
     <!-- Bootstrap -->
     @*<link href="~/Vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />*@
     <!-- Font Awesome -->
-    <link href="~/Vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/50ff3f267c.js" crossorigin="anonymous"></script>
+    @*<link href="~/Vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet" />*@
+    <link rel="stylesheet" href="~/Vendors/bootstrap_4.6.2/dist/css/bootstrap.min.css" />
+    <script src="~/Vendors/bootstrap_4.6.2/dist/js/jquery.slim.min.js"></script>
+    <script src="~/Vendors/bootstrap_4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <link href="~/Content/bootstrap-datetimepicker.min.css" rel="stylesheet" />
-    <link href="~/Content/kioscos.css" rel="stylesheet" />
+    @*<link href="~/Content/kioscos.css" rel="stylesheet" />*@
+    <link rel="stylesheet" href="~/Content/Kioscos/_Layout.css" />
     <link href="~/Content/select2.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/Content/loader.css">
     <link href="~/Content/sweetalert2.css" rel="stylesheet" />
@@ -41,35 +42,39 @@
     <div class="container-fluid p-0">
         <div id="header" class="row">
             <div id="logo" class="col-md-2 col-2 img-container">
-                <img src="../Images/logo.png" alt="Logo-corparques" class="img-fluid" style="height:80%; padding-top: 10%;">
+                <img src="../Images/logo.png" alt="Logo-corparques" class="img-fluid logo">
             </div>
-            <div id="banner" class="col-md-10 col-10">
-                Banner
-                <!-- <img src="" alt="Banner" class="w-100 "> -->
+            <div id="banner" class="col-md-10 col-10 col">
+                <img src="../Images/Kioscos/banner.png" alt="Logo-corparques" class="img-fluid banner">
             </div>
         </div>
         <div id="mensaje" class="row">
             <div class="col-md-12">
-                <div class="marquee">
-                    <div class="msj">
-                        <p style="color: #ffffff; transform:translate(0,50%); font-weight:bold;">Mensaje rotativo - Corparques - Mundo Aventura</p>
-                    </div>
+                <p class="msj">
+                    En este dipositivo podr&aacute;s verificar e imprimir los pasaportes digitales para mayor facilidad de ingreso a nuestras atracciones
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 col">
+                <div id="contenido" class=" bg-img">
+                    <img src="../Images/Kioscos/logo-MA.png" alt="logo mundo-aventura" class="imagen">
+
+                    @RenderBody()
                 </div>
             </div>
         </div>
-        <div id="contenido">
-            @RenderBody()
-        </div>
     </div>
 
-    <div id="modalCRUD" class="modal" role="dialog">
+    <div id="modalCRUD" class="modal modal-bg" role="dialog">
+        <img src="../Images/Kioscos/logo-MA.png" alt="logo mundo-aventura" class="imagen">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header btn-primary">
+            <div class="modal-content modal-cnt-spv">
+                <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title"></h4>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" style="padding: 0px; text-align: center;">
 
                 </div>
                 <div class="msjErrorModal">
@@ -88,6 +93,7 @@
             </div>
         </div>
     </div>
+
     <!-- jQuery -->
     <script src="~/Vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
@@ -142,6 +148,3 @@
     </script>
 </body>
 </html>
-
-
-
