--- a/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Content/Kioscos/ImpresionBoleta.css
+++ b/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Content/Kioscos/ImpresionBoleta.css
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 5px 20px 25px;
+    padding: 5px 20px 10px;
 }
 
 .brazalete-body {
@@ -37,7 +37,7 @@
     display: flex;
     flex-direction: column;
     background: #ffffff;
-    padding: 0px 20px 25px;
+    padding: 0px 20px 18px;
 }
 
 .fecha {
@@ -51,7 +51,7 @@
 }
 
 .boleta-bottom {
-    height: 40px;
+    /*height: 40px;*/
     width: 90%;
     margin: auto;
     margin-top: 10px;
@@ -70,15 +70,6 @@
     border: none;
     border-radius: 7px;
 }
-
-/*.my-modal {
-    display: none;
-    background-color: rgba(255, 255, 255, 0);
-    margin: auto;
-    height: 100%;
-    width: 100%;
-    margin-top: 26%;
-}*/
 
 .my-modal {
     display: none;
