--- a/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Views/Shared/_LayoutKiosco.cshtml
+++ b/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Views/Shared/_LayoutKiosco.cshtml
@@ -142,6 +142,9 @@
     }
     @RenderSection("scripts", required: false)
     <script>
+        $(window).load(function() {
+            $('#loader-1').hide();
+        });
         function cerrarSesion() {
             $('#frmLogOut').submit();
         }
