--- a/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Content/Kioscos/Menu.css
+++ b/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Content/Kioscos/Menu.css
@@ -58,7 +58,7 @@
 
 .modal-container {
     transform: translate(0%,30%);
-    padding: 0px 25px;  
+    padding: 0px 25px;
 }
 /*.modal-correo {
     width: 800px;
@@ -143,4 +143,18 @@
     margin-left: 6em;
     /* margin-top: -15px; */
     text-decoration: underline;
+}
+
+.modal-tyc {
+    background-color: rgb(0 0 0 / .66);
+    margin-top: 0;
+}
+
+.content-tyc {
+    width: 60%;
+    top: 8%;
+    background: #ffffff;
+    text-align:center;
+    padding: 0px 40px;
+    left: 25%;
 }
