--- a/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Views/Pos/Index.cshtml
+++ b/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Views/Pos/Index.cshtml
@@ -793,8 +793,8 @@
                     <button type="button" class="btn btn-danger" id="btnCancelCortesia">Cancelar</button>
 
                 </div>
-            </div>  modal-content
-        </div>  modal-dialog 
+            </div>
+        </div>
     </div>
     
     <div id="loadingDiv" class="modalLoading" style="display: none">
