--- a/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Views/Kioscos/Index.cshtml
+++ b/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Views/Kioscos/Index.cshtml
@@ -2,20 +2,17 @@
 @{
     ViewBag.Title = "gjghj";
 
-    Layout = "";
+    Layout = "~/Views/Shared/_LayoutKiosco.cshtml";
 
 }
-<link rel="stylesheet" href="~/Content/Kioscos/index.css">
-<span class="titulo" style="display:none;">
-    Bienvenido al m&oacute;dulo interactivo de gesti&oacute;n
-</span>
 
-<script>
-    window.addEventListener("DOMContentLoaded", () => {
-        (function () {
-            window.addEventListener("click", () => {
-                window.location.href = "Kioscos/IngresoCodigo";
-            });
-        })();
-    });
-</script>
+<div class="col-md-12 p-0">
+    <img src="./Images/Ikaro app.jpg" alt="Imagen-fondo" class="w-100 p-0" style="object-fit: fill;">
+
+     <a href="@Url.Action("IngresoCodigo", "Kioscos")" class="boton">
+        
+            Continuar
+        
+    </a>
+
+</div>
