--- a/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Views/Kioscos/IngresoCodigo.cshtml
+++ b/Fuentes Core Desarrollo/CorParques.Presentacion.MVC.Core/Views/Kioscos/IngresoCodigo.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutKiosco.cshtml";
 }
 
-<link rel="stylesheet" href="~/Content/Kioscos/General.css" />
-<a href="javascript:RedireccionAtras()" style="text-decoration: none; position: fixed; top: 24%; left: 2px;">
+@*<button onclick="RedireccionAtras()">Atras</button>*@
+<a href="javascript:RedireccionAtras()" style="text-decoration: none; position: absolute; top: -40px; left: 2px;">
     <div class="backButton">
         <div class="bckTriangulo"></div>
     </div>
@@ -15,7 +15,7 @@
 <div class="d-flex flex-column justify-content-center text-center mt-5">
 
     <div class="mt-5">
-        <h2 style="font-weight: bold;">Escanee el c&oacute;digo en el lector o dig&iacute;telo para continuar</h2>
+        <h2>Escanee el c&oacute;digo en el lector o dig&iacute;telo para continuar</h2>
     </div>
 
     <div class="row mt-5">
@@ -23,7 +23,7 @@
             <div class="d-flex flex-column justify-content-center">
                 <input id="input-codigo" type="text" class="input-large">
                 <input id="input-codBarras" type="text" autofocus class="input-lector">
-
+                
                 <div class="panel">
 
                     <div><button class="btn btn-dark" onclick="presionar(this)">1</button></div>
@@ -38,9 +38,9 @@
                     <div><button class="btn btn-dark" onclick="presionar(this)">8</button></div>
                     <div><button class="btn btn-dark" onclick="presionar(this)">9</button></div>
 
-                    <div><button class="btn btn-primary btn-blue" onclick="ConsultarBoleta()">Entrar</button></div>
+                    <div><button class="btn btn-primary" onclick="ConsultarBoleta()">Entrar</button></div>
                     <div><button class="btn btn-dark" onclick="presionar(this)">0</button></div>
-                    <div><button class="btn btn-back" onclick="borrar()"><i class="fa-sharp fa-solid fa-delete-left"></i></button></div>
+                    <div><button class="btn btn-dark" onclick="borrar()">Borrar</button></div>
 
                 </div>
             </div>
@@ -48,6 +48,25 @@
 
         <div class="col-lg-5">
             <div class="video"></div>
+        </div>
+    </div>
+
+    <div class="modal" tabindex="-1" id="mymodal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">¡Error!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="cerrarModalIngreso()">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>El codigo ingresado es incorrecto </p>
+                </div>
+                <div class="modal-footer">
+                    
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -91,6 +110,11 @@
 
     function RedireccionAtras() {
         window.location.replace("/Kioscos");
+    }
+
+    function cerrarModalIngreso() {
+        $("#mymodal").modal('hide');
+        window.location.reload();
     }
 </script>
 
