--- a/CorParques.Presentacion.MVC.Core/Content/Kioscos/Menu.css
+++ b/CorParques.Presentacion.MVC.Core/Content/Kioscos/Menu.css
@@ -144,3 +144,17 @@
     /* margin-top: -15px; */
     text-decoration: underline;
 }
+
+.modal-tyc {
+    background-color: rgb(0 0 0 / .66);
+    margin-top: 0;
+}
+
+.content-tyc {
+    width: 60%;
+    top: 8%;
+    background: #ffffff;
+    text-align: center;
+    padding: 0px 40px;
+    left: 25%;
+}
