--- a/CorParques.Presentacion.MVC.Core/Content/Kioscos/_Layout.css
+++ b/CorParques.Presentacion.MVC.Core/Content/Kioscos/_Layout.css
@@ -103,7 +103,7 @@ body {
     height: 100%;
     z-index: 10000;
     background-color: rgba(0, 0, 0, 0.76);
-    display: none;
+    display: block;
 }
 
 body {
